--- a/App/gym-app/src/Pagina registro/registro-page.css
+++ b/App/gym-app/src/Pagina registro/registro-page.css
@@ -6,7 +6,14 @@
   width: 100%;
   height: 100vh;
   padding: 20px;
-  gap: 150px;
+  gap: 100px;
   box-sizing: border-box;
   overflow: hidden;
+}
+
+.boton-volver {
+  position: fixed;
+  right: 20px;
+  z-index: 1000;
+  margin: 0;
 }
