--- a/App/gym-app/src/Pagina registro/formulario-maquina.css
+++ b/App/gym-app/src/Pagina registro/formulario-maquina.css
@@ -62,14 +62,10 @@ button {
   grid-column: span 2; /* Ocupa las dos columnas */
   padding: 10px;
   background-color: #1a1a1a;
-  color: var(--text-light);
+  color: white;
   border-radius: 8px;
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: var(--primary-blue);
 }
