--- a/App/gym-app/src/Pantalla zonas/zona-page.css
+++ b/App/gym-app/src/Pantalla zonas/zona-page.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-.parent {
+.parent-zona {
   margin: 0;
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -19,7 +19,7 @@
   box-sizing: border-box;
 }
 
-.div1 {
+.div1-zona {
   grid-column: 1 / -1;
   grid-row: 1;
   min-height: 94px;
@@ -32,20 +32,21 @@
   gap: 20px; /* Añadido */
 }
 
-.div3 {
+.div3-zona {
   grid-column: 1 / -1;
   grid-row: 2; /* Asignado a fila 2 */
-  height: auto;
+  min-height: auto;
+  max-height: 100%;
   display: flex;
-  margin-bottom: 50px;
+  margin-top: 20px;
   justify-content: center;
   align-items: center;
   padding: 3px;
   align-self: center; /* Centrado vertical en su celda */
-  background-color: rgba(255, 255, 255, 0.048);
+  background-color: rgba(255, 129, 27, 0.815);
 }
 
-.div4 {
+.div4-zona {
   grid-column: 2 / span 3;
   grid-row: 3; /* Asignado a fila 3 */
   display: flex;
