--- a/App/gym-app/src/navbarra.css
+++ b/App/gym-app/src/navbarra.css
@@ -2,7 +2,6 @@
 .navbar-container {
   width: 100%;
   height: 100%;
-  background-color: #ffffff00;
   color: rgb(255, 227, 227);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0);
   position: sticky;
@@ -18,6 +17,8 @@
   max-width: 1200px;
   margin: 0 auto;
   height: 100%;
+
+  border: none;
 }
 
 /* Contenedor del logo + texto */
@@ -80,6 +81,8 @@
 .primary {
   background-color: #1a1a1a00;
   width: 150px;
+  text-decoration: none;
+  border: solid rgb(124, 124, 124) 1px;
 }
 
 .primary:hover {
@@ -91,6 +94,7 @@
   background-color: #1a1a1a00;
   width: 180px;
   text-decoration: none;
+  border: solid rgb(124, 124, 124) 1px;
 }
 
 .secondary:hover {
